--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -1,30 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html  xmlns:th="http://www.thymeleaf.org">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Product Page - Admin HTML Template</title>
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto:400,700"
-    />
-    <!-- https://fonts.google.com/specimen/Roboto -->
-    <link rel="stylesheet" href="css/fontawesome.min.css" />
-    <!-- https://fontawesome.com/ -->
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <!-- https://getbootstrap.com/ -->
-    <link rel="stylesheet" href="css/templatemo-style.css">
-    
+        <link rel="stylesheet" th:href="@{/css/fontawesome.min.css}"/>
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
+    <link rel="stylesheet" th:href="@{/css/templatemo-style.css}" />
   </head>
 
   <body id="reportsPage">
-   
     <div class="container mt-5">
       <div class="row tm-content-row">
         <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 tm-block-col">
-        	<input type="text" placeholder="基地名称" class="form-group"/>
-        	<input type="button" id="" style="border-radius: 30px 30px 30px 30px;width: 100px;margin-left: 20px;" class="btn-primary" value="查询" />
+        	<form action="query" method="post">
+	        	<input type="text" name="aname" placeholder="基地名称" class="form-group"/>
+	        	<input type="text" name="pistion" placeholder="基地位置" class="form-group"/>
+	        	<input type="submit" id="" style="border-radius: 30px 30px 30px 30px;width: 100px;margin-left: 20px;" class="btn-primary" value="查询" />
+        	</form>
+        	
           <div class="tm-bg-primary-dark tm-block tm-block-products">
             <div class="tm-product-table-container">
               <table class="table table-hover tm-table-small tm-product-table">
@@ -32,36 +27,18 @@
                   <tr>
                     <th scope="col">&nbsp;</th>
                     <th scope="col">基地名称</th>
-                    <th scope="col">基地人数</th>
-                    <th scope="col">创建时间</th>
-                    <th scope="col">状态</th>
+                    <th scope="col">基地位置</th>
                     <th scope="col">&nbsp;</th>
                   </tr>
                 </thead>
                 <tbody>
-                  <tr>
+                  <tr th:each="item : ${list}">
                     <th scope="row"><input type="checkbox" /></th>
-                     <td class=""><a href="edit_base.html" style="color: white;">基地名称</a></td>
-                    <td>1,450</td>
-                    <td>28 March 2019</td>
-                    <td>开放</td>
+                     <td class=""><a href="" style="color: white;" th:text="${item.aname}"></a></td>
+                    <td th:text="${item.pistion}"></td>
                     <td>
                       <a href="#" class="tm-product-delete-link">
                         <i class="far fa-trash-alt tm-product-delete-icon"></i>
-                        
-                      </a>
-                    </td>
-                  </tr>
-                  <tr>
-                    <th scope="row"><input type="checkbox" /></th>
-                  <td class=""><a href="edit_base.html" style="color: white;">基地名称</a></td>
-                    <td>1,450</td>
-                    <td>28 March 2019</td>
-                    <td>开放</td>
-                    <td>
-                      <a href="#" class="tm-product-delete-link">
-                        <i class="far fa-trash-alt tm-product-delete-icon"></i>
-                        
                       </a>
                     </td>
                   </tr>
@@ -70,27 +47,23 @@
             </div>
             <!-- table container -->
             <a
-              href="insert_base.html"
+              th:href="@{toinsert}"
               class="btn btn-primary btn-block text-uppercase mb-3">新增基地</a>
             <button class="btn btn-primary btn-block text-uppercase">
             	删除基地
             </button>
           </div>
         </div>
-        
+        </div>
     </div>
-    
-
-    <script src="js/jquery-3.3.1.min.js"></script>
+    <script th:src="@{/js/jquery-3.3.1.min.js}"></script>
     <!-- https://jquery.com/download/ -->
-    <script src="js/bootstrap.min.js"></script>
+    <script th:src="@{/js/bootstrap.min.js}"></script>
     <!-- https://getbootstrap.com/ -->
     <script>
-      $(function() {
         $(".tm-product-name").on("click", function() {
           window.location.href = "edit-product.html";
         });
-      });
     </script>
   </body>
 </html>
