--- a/src/main/resources/templates/addcustomer.html
+++ b/src/main/resources/templates/addcustomer.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<title>添加客户</title>
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700">
-		<link rel="stylesheet" href="css/fontawesome.min.css">
-		<link rel="stylesheet" href="css/bootstrap.min.css">
-		<link rel="stylesheet" href="css/templatemo-style.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700">
+		<link rel="stylesheet"  th:href="@{/css/fontawesome.min.css}">
+		<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" >
+		<link rel="stylesheet" th:href="@{/css/templatemo-style.css}" >
 
 	</head>
 	<style>
@@ -45,14 +45,10 @@
 							</div>
 	
 							<div class="row" id="shuxing">
-								<form class="form-inline" class="col-md-12" method="post">
+								<form class="form-inline col-md-12" method="post">
 									<div class="form-group col-md-6">
 										<label for="cname" class="col-md-5">客户名称:</label>
 										<input type="text" id="cname" class="form-control col-md-7">
-									</div>
-									<div class="form-group col-md-6">
-										<label for="email" class="col-md-5">E-Mail:</label>
-										<input type="text" id="email" class="form-control col-md-7">
 									</div>
 									<div class="form-group col-md-6">
 										<label for="" class="col-md-5">电话:</label>
@@ -68,7 +64,7 @@
 										<input type="text" class="form-control col-md-7">
 									</div>
 									<div class="form-group col-md-6">
-										<label for="" class="col-md-5">体重(Kg):</label>
+										<label for="" class="col-md-5">体重:</label>
 										<input type="text" class="form-control col-md-7">
 									</div>
 									<div class="form-group col-md-6">
@@ -79,9 +75,9 @@
 										<label for="" class="col-md-5">爱好:</label>
 										<input type="text" class="form-control col-md-7">
 									</div>
-									<div class="form-group col-md-12" style="margin-left: 15px;">
-										<label for="" class="col-md-2">身份证号:</label>
-										<input type="text" class="form-control col-md-8">
+									<div class="form-group col-md-6" >
+										<label for="" class="col-md-5">身份证号:</label>
+										<input type="text" class="form-control col-md-7">
 									</div>
 									<div class="form-group col-md-12">
 										<label for="" class="col-md-3">选择报名方式:</label>
@@ -90,32 +86,9 @@
 									</div>
 									<div class="form-group col-md-12" style="display: none;">
 										<label for="" class="col-md-3">导入团员信息:</label>
-										<a style="color: white;margin-right: 20px;">下载导入模板</a>
+										<a style="color: white;margin-right: 20px;" th:href="@{/customer/downloadTemple}">下载导入模板</a>
 										<input type="file" class="form-control" style="padding: 10px;">
 									</div>
-									<div class="form-group col-md-12">
-										<label for="" class="col-md-2" style="margin-left: 15px;">出生日期:</label>
-										<p>
-											<span>年</span>
-											<select name="year" id="brithday" class="form-control">
-												<option>1999</option>
-											</select>
-										</p>
-										<p>
-											<span>月</span>
-											<select name="month" class="form-control">
-												<option>1999</option>
-												<option>1998</option>
-											</select>
-										</p>
-										<p>
-											<span>日</span>
-											<select name="day" class="form-control">
-												<option>1999</option>
-											</select>
-										</p>
-									</div>
-	
 									<input type="submit" value="新增客户" style="margin-left: 120px;" class="btn btn-info" />
 								</form>
 							</div>
@@ -125,11 +98,11 @@
 				</div>
 			</div>
 			
-			<script src="js/jquery-3.3.1.min.js"></script>
+			<script th:src="@{/js/jquery-3.3.1.min.js}"></script>
 			<!-- https://jquery.com/download/ -->
-			<script src="jquery-ui-datepicker/jquery-ui.min.js"></script>
+			<script th:src="@{/jquery-ui-datepicker/jquery-ui.min.js}"></script>
 			<!-- https://jqueryui.com/download/ -->
-			<script src="js/bootstrap.min.js"></script>
+			<script th:src="@{/js/bootstrap.min.js}"></script>
 			<!-- https://getbootstrap.com/ -->
 			<script>
 				//选中团队 即出现Excel导入 	
