--- a/src/main/resources/templates/customer.html
+++ b/src/main/resources/templates/customer.html
@@ -81,7 +81,7 @@
 											</td>
 											<td><b th:text=${it.name1}></b></td>
 											<td>
-												<a href="#">查看</a>
+												<a th:href="@{/customer/toCustomerDetails(id=${it.id})}">查看</a>
 											</td>
 										</tr>
 									</tbody>
