--- a/src/main/resources/templates/insert_project.html
+++ b/src/main/resources/templates/insert_project.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,13 +10,13 @@
       href="https://fonts.googleapis.com/css?family=Roboto:400,700"
     />
     <!-- https://fonts.google.com/specimen/Roboto -->
-    <link rel="stylesheet" href="css/fontawesome.min.css" />
+    <link rel="stylesheet" th:href="@{/css/fontawesome.min.css}" />
     <!-- https://fontawesome.com/ -->
-    <link rel="stylesheet" href="jquery-ui-datepicker/jquery-ui.min.css" type="text/css" />
+    <link rel="stylesheet" th:href="@{/jquery-ui-datepicker/jquery-ui.min.css}" type="text/css" />
     <!-- http://api.jqueryui.com/datepicker/ -->
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
     <!-- https://getbootstrap.com/ -->
-    <link rel="stylesheet" href="css/templatemo-style.css">
+    <link rel="stylesheet" th:href="@{/css/templatemo-style.css}">
     <style>
     	#ty_tc_top span{
     		margin-left: 50px;
@@ -113,6 +113,20 @@
                     />
                   </div>
                   
+                   <div class="form-group mb-3">
+                    <label
+                      for=""
+                      >价格</label
+                    >
+                    <input
+                      id="name"
+                      name="name"
+                      type="text"
+                      class="form-control validate"
+                      required
+                    />
+                  </div>
+                  
                   <div class="row">
                   	
                       <div class="form-group mb-3 col-xs-12 col-sm-6">
@@ -167,7 +181,33 @@
                             data-large-mode="true"
                           />
                         </div>
+                        <div class="form-group mb-3 col-xs-12 col-sm-6">
+                          <label
+                            for="expire_date"
+                            >最大身高
+                          </label>
+                          <input
+                            id="expire_date"
+                            name="expire_date"
+                            type="text"
+                            class="form-control validate"
+                            data-large-mode="true"
+                          />
+                        </div>
                         
+                         <div class="form-group mb-3 col-xs-12 col-sm-6">
+                          <label
+                            for="stock"
+                            >最小身高
+                          </label>
+                          <input
+                            id="stock"
+                            name="stock"
+                            type="text"
+                            class="form-control validate"
+                            required
+                          />
+                        </div>
                         
                   </div>
                   <div hidden id="show_jd" class="form-group mb-3">
@@ -217,6 +257,7 @@
 						<table class="table">
 							<thead>
 								<tr>
+									<th>基地名称</th>
 									<th>基地位置</th>
 									<th></th>
 								</tr>
@@ -224,14 +265,6 @@
 							<tbody>
 								<tr>
 									<td xmid="1">一区2号</td>
-									<th><input type="checkbox" name="ck_jd" /></th>
-								</tr>
-								<tr>
-									<td xmid="2">一区5号</td>
-									<th><input type="checkbox" name="ck_jd" /></th>
-								</tr>
-								<tr>
-									<td xmid="3">二区2号</td>
 									<th><input type="checkbox" name="ck_jd" /></th>
 								</tr>
 							</tbody>
@@ -243,11 +276,11 @@
 				</div>
    </div>
 
-    <script src="js/jquery-3.3.1.min.js"></script>
+    <script th:src="@{/js/jquery-3.3.1.min.js}"></script>
     <!-- https://jquery.com/download/ -->
-    <script src="jquery-ui-datepicker/jquery-ui.min.js"></script>
+    <script th:src="@{/jquery-ui-datepicker/jquery-ui.min.js}"></script>
     <!-- https://jqueryui.com/download/ -->
-    <script src="js/bootstrap.min.js"></script>
+    <script th:src="@{/js/bootstrap.min.js}"></script>
     <!-- https://getbootstrap.com/ -->
     <script>
       $(function() {
