--- a/src/main/resources/templates/project.html
+++ b/src/main/resources/templates/project.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,11 +10,11 @@
       href="https://fonts.googleapis.com/css?family=Roboto:400,700"
     />
     <!-- https://fonts.google.com/specimen/Roboto -->
-    <link rel="stylesheet" href="css/fontawesome.min.css" />
+    <link rel="stylesheet" th:href="@{/css/fontawesome.min.css}"/>
     <!-- https://fontawesome.com/ -->
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
     <!-- https://getbootstrap.com/ -->
-    <link rel="stylesheet" href="css/templatemo-style.css">
+    <link rel="stylesheet" th:href="@{/css/templatemo-style.css}">
     
   </head>
 
@@ -58,7 +58,7 @@
             </div>
             <!-- table container -->
             <a
-              href="insert_project.html"
+              th:href="@{toinsert}"
               class="btn btn-primary btn-block text-uppercase mb-3">新增项目</a>
             <button class="btn btn-primary btn-block text-uppercase">
             	删除项目
@@ -70,9 +70,9 @@
       </div>
 
 </div>
-    <script src="js/jquery-3.3.1.min.js"></script>
+    <script th:src="@{/js/jquery-3.3.1.min.js}"></script>
     <!-- https://jquery.com/download/ -->
-    <script src="js/bootstrap.min.js"></script>
+    <script th:src="@{/js/bootstrap.min.js}"></script>
     <!-- https://getbootstrap.com/ -->
     <script>
       $(function() {
