--- a/src/main/resources/templates/JJ_customer.html
+++ b/src/main/resources/templates/JJ_customer.html
@@ -20,47 +20,13 @@
 				<div class="modal-dialog modal-lg" role="document">
 					<div class="modal-content">
 						<div id="" class="modal-header JJ_shang">
-							<span class="closeModal"><!--  <label>部门</label>&nbsp;&nbsp;&nbsp;<input
-								type="text" />  --><label>职位</label>&nbsp;&nbsp;&nbsp;<input
-								type="text" />
+							<span class="closeModal">
+								<!--  <label>部门</label>&nbsp;&nbsp;&nbsp;<input
+								type="text" />  -->
+								<label>职位</label>&nbsp;&nbsp;&nbsp;<input type="text" />
 							</span> <span class="close" data-dismiss="modal">&times;</span>
 						</div>
-						<div id="" class="modal-body">
-							<table class="table tables">
-								<tr>
-									<td>姓名</td>
-									<td><input type="text" name="name"/></td>
-									<td>性别</td>
-									<td><input type="text" name="sex" /></td>
-									<td>出生日期</td>
-									<td><input type="date" name="date" /></td>
-								</tr>
-								<tr>
-									<td>家庭地址</td>
-									<td colspan="3"><input type="text" name="address1" /></td>
-									<td>民族</td>
-									<td><input type="text" name="nation" /></td>
-								</tr>
-								<tr>
-									<td>现住地址</td>
-									<td colspan="3"><input type="text" name="address2" /></td>
-									<td>生日</td>
-									<td><input type="text" name="sr" /></td>
-								</tr>
-								<tr>
-									<td>身份证号</td>
-									<td colspan="3"><input type="text" /></td>
-									<td>婚姻状况</td>
-									<td><input type="text" name="hy" /></td>
-								</tr>
-								<tr>
-									<td>入职时间</td>
-									<td colspan="2"><input type="date" /></td>
-									<td>离职时间</td>
-									<td colspan="2"><input type="date" name="lz" /></td>
-								</tr>
-							</table>
-						</div>
+						<div id="" class="modal-body appe"></div>
 						<div id="" class="modal-footer">
 							<a class="btn">提交</a> <a class="btn" data-dismiss="modal">关闭</a>
 						</div>
@@ -160,17 +126,17 @@
 									<th scope="row"><b class="uids" th:text="${item.id}"></b></th>
 									<td><b th:text="${item.ulist.uname}"></b></td>
 									<td>
-										<div class="tm-status-circle moving"></div>
-										<b th:text="${item.plist.postion}"></b>
+										<div class="tm-status-circle moving"></div> <b
+										th:text="${item.plist.postion}"></b>
 									</td>
 									<td><b>男</b></td>
-									
-									<td><b th:text="${item.slist.staffid}">
-									</b></td>
+
+									<td><b th:text="${item.slist.staffid}"> </b></td>
 									<td><b> <a href="#" data-target="#JJ_tan"
 											data-toggle="modal" class="tm-product-delete-link JJ_xiang">
 												<i class="fa fa-info"></i>
-										</a>									</b></td>
+										</a>
+									</b></td>
 									<td><b> <a href="javascript:void(0)"
 											class="tm-product-delete-link JJ_delete"> <i
 												class="far fa-trash-alt tm-product-delete-icon"></i>
@@ -192,37 +158,60 @@
 	<script th:src="@{/js/bootstrap.min.js}"></script>
 	<script th:src="@{/js/tooplate-scripts-cy.js}"></script>
 	<script>
-	$(function(){
-		$(".JJ_xiang").click(function(){
-			var h=$(this).parent().parent().parent().find(".uids").html();			
-		alert(h);
-		
-		
-		
-		$.ajax({
-			url:"queryById?id="+h,
-			type:"POST",
-			dataType:"json",
-			contentType:"application/json;charset=utf-8",
-			success:function(data){
-				$(data).each(function(i,obj){
-				var jia="<tr><td>"+obj.name+"</td>"+
-				"<td>"+obj.age+"</td>"+
-				"<td><a href='ajaxQueryById?id="+obj.id+"'>修改</a></td></tr>";
-				$("table").append(jia);
-				})
-			}
+		$(function() {
+			$(".JJ_xiang")
+					.click(
+							function() {
+								var h = $(this).parent().parent().parent()
+										.find(".uids").html();
+								alert(h);
+									$.ajax({
+											url : "queryById?id=" + h,
+											type : "POST",
+											dataType : "json",
+											contentType : "application/json;charset=utf-8",
+											success : function(data) {
+												var st = "<table class='table tables'>"
+														+ "<tr>"
+														+ "<td>姓名</td>"
+														+ "<td><input type='text' name='name'/></td>"
+														+ "<td>性别</td>"
+														+ "<td><input type='text' name='sex' /></td>"
+														+ "<td>出生日期</td>"
+														+ "<td><input type='date' name='date' /></td>"
+														+ "</tr>"
+														+ "<tr>"
+														+ "<td>家庭地址</td>"
+														+ "<td colspan='3'><input type='text' name='address1' /></td>"
+														+ "<td>民族</td>"
+														+ "<td><input type='text' name='nation' /></td>"
+														+ "</tr>"
+														+ "<tr>"
+														+ "<td>现住地址</td>"
+														+ "<td colspan='3'><input type='text' name='address2' /></td>"
+														+ "<td>生日</td>"
+														+ "<td><input type='text' name='sr' /></td>"
+														+ "</tr>"
+														+ "<tr>"
+														+ "<td>身份证号</td>"
+														+ "<td colspan='3'><input type='text' /></td>"
+														+ "<td>婚姻状况</td>"
+														+ "<td><input type='text' name='hy' /></td>"
+														+ "</tr>"
+														+ "<tr>"
+														+ "<td>入职时间</td>"
+														+ "<td colspan='2'><input type='date' /></td>"
+														+ "<td>离职时间</td>"
+														+ "<td colspan='2'><input type='date' name='lz' /></td>"
+														+ "</tr>" + "</table>";
+												$(".appe").append(st);
+											}
+										})
+
+							})
 		})
-		
-		
-		
-		
-		
-		
-		})
-	})
-		</script>
-		
+	</script>
+
 </body>
 
 </html>
