--- a/src/main/resources/templates/GoodAdd.html
+++ b/src/main/resources/templates/GoodAdd.html
@@ -16,8 +16,11 @@
 	<body id="reportsPage">
 		<div class="" id="home">
 			<div class="container tm-mt-big tm-mb-big">
+				<form th:action="@{/addmenu}" class="tm-edit-product-form">
 				<div class="row">
+			
 					<div class="col-xl-9 col-lg-10 col-md-12 col-sm-12 mx-auto">
+					
 						<div class="tm-bg-primary-dark tm-block tm-block-h-auto">
 							<div class="row">
 								<div class="col-12">
@@ -26,11 +29,11 @@
 							</div>
 							<div class="row tm-edit-product-row">
 								<div class="col-xl-6 col-lg-6 col-md-12">
-									<form action="" class="tm-edit-product-form">
+									
 										<div class="form-group mb-3">
 											<label for="name">商品名称
                     </label>
-											<input id="name" name="name" type="text" class="form-control validate" required />
+											<input id="name" name="mname" type="text" class="form-control validate" required />
 										</div>
 										<div class="form-group mb-3">
 											<label for="description">商品介绍</label
@@ -39,6 +42,7 @@
                       class="form-control validate"
                       rows="3"
                       required
+                      name="name1"
                     ></textarea>
                   </div>
                  <div class="form-group mb-3">
@@ -50,11 +54,9 @@
                       class="custom-select tm-select-accounts"
                       id="hd_xz_ry"
                       onchange="xsry()"
+                      name="menutypeid"
                     >
-                      <option selected>请选择</option>
-                      <option value="1">肉食类</option>
-                      <option value="2">饮料类</option>
-                      <option value="3">其他类</option>
+                      <option th:each="itemtype,state : ${list}" th:value="${itemtype.id}" th:text="${itemtype.tname}"></option>
                     </select>
                   </div>
                   
@@ -64,7 +66,7 @@
                             for="expire_date"
                             >商品价格
                           </label>
-											<input id="expire_date" name="expire_date" type="text" class="form-control validate" data-large-mode="true" />
+											<input id="expire_date" name="price" type="text" class="form-control validate" data-large-mode="true" />
 										</div>
 										<div class="form-group mb-3 col-xs-12 col-sm-6">
 											<label for="stock">商品库存
@@ -77,8 +79,8 @@
                     >
                     <select
                       class="custom-select tm-select-accounts"
+                      name="state"
                     >
-                      <option selected>请选择</option>
                       <option value="1">是</option>
                       <option value="2">否</option>
                     </select>
@@ -99,12 +101,10 @@
                     value="上传图片"
                     onclick="document.getElementById('fileInput').click();"
                   />
-                </div>
-                
-                
+                </div>  
               </div>
               <div class="col-12" style="margin-top: 20px;">
-                <button type="submit" class="btn btn-primary btn-block text-uppercase">新增活动</button>
+                <input type="submit" value="新增" class="btn btn-primary btn-block text-uppercase">
               </div>
             </form>
             </div>
@@ -122,94 +122,7 @@
     <script src="js/bootstrap.min.js"></script>
     <!-- https://getbootstrap.com/ -->
     <script>
-      $(function() {
-        
-        
-        $("#xz_xm_button").click(function(){
-        	$("#xm_tc").removeAttr("hidden");
-        })
-        
-        //克隆人员信息
-        $("[name=ck_ry]").click(function(){
-        	if(this.checked){
-        		var ry=$(this).parents("tr").clone();
-	        	ry.find("input").remove();
-	        	var remove_ry=$("<td><a href='javascript:void(0)' style='color: red;' id='yc_ry_a' onclick='yc_ry(this)'>移除</a></td>");
-	        	$(ry).append(remove_ry);
-	        	$("#show_ry").removeAttr("hidden"); 
-	        	$("#show_ry_table").append(ry);
-        	}
-        });
-        
-        //克隆项目信息
-        $("[name=ck_xm]").click(function(){
-        	if (this.checked) {
-        		var xm=$(this).parents("tr").clone();
-	        	xm.find("input").remove();
-	        	var remove_xm=$("<td><a href='javascript:void(0)' style='color: red;' id='yc_ry_a' onclick='yc_xm(this)'>移除</a></td>");
-	        	$(xm).append(remove_xm);
-	        	$("#show_xm").removeAttr("hidden"); 
-	        	$("#show_xm_table").append(xm);
-        	}
-        	
-        })
-      });
-      function xsry(){
-      	$("#ry_tc").removeAttr("hidden");
-      }
-      
-      //移除以克隆的人员信息与弹窗的checkbox
-     	function yc_ry(th){
-     		$(th).parents("tr").remove();   		
-     		var ry_sz=[];
-     		var ry_id=$(th).parents("tr").find("td:eq(0)").attr("ryid");
-     		var ry_id2;
-     		var id;
-     		$("#ry_tb").each(function(){
-     			id=$(this).find("td:nth-of-type(1)");
-     			$.each(id, function(i,obj) {
-     				ry_id2=$(obj).attr("ryid");
-     				ry_sz.push(ry_id2);
-     			});
-     		})
-     		for (var i=0;i<ry_sz.length;i++) {
-     				if(ry_id==ry_sz[i]){
-     					var rytd=$("#ry_tb").find("[ryid='"+ry_id+"']");
-     					rytd.next().find("input").prop("checked",false);
-     				}
-		   }
-     	}
      	
-     	//移除项目信息与以克隆的项目信息
-     	function yc_xm(th){
-     		$(th).parents("tr").remove();   		
-     		var xm_sz=[];
-     		var xm_id=$(th).parents("tr").find("td:eq(0)").attr("xmid");
-     		var xm_id2;
-     		var id;
-     		$("#xm_tc").each(function(){
-     			id=$(this).find("td:nth-of-type(1)");
-     			$.each(id, function(i,obj) {
-     				xm_id2=$(obj).attr("xmid");
-     				xm_sz.push(xm_id2);
-     			});
-     		})
-     		for (var i=0;i<xm_sz.length;i++) {
-     			console.log(xm_sz[i]);
-     				if(xm_id==xm_sz[i]){
-     					var xmtd=$("#xm_tc").find("[xmid='"+xm_id+"']");
-     					xmtd.next().find("input").prop("checked",false);
-     				}
-		   }
-     	}
-     	
-     	
-     	function hidden_ry(th){
-     		$("#ry_tc").css("display","none");
-     	}
-     	function hide_xm(th){
-     		$("#xm_tc").css("display","none");
-     	}
     </script>
   </body>
 </html>
