--- a/src/main/resources/templates/GoodContact.html
+++ b/src/main/resources/templates/GoodContact.html
@@ -33,7 +33,6 @@
                   <tr>
                     <th scope="col">套餐样式</th>
                     <th scope="col">
-                    	
                     	套餐名称
                     </th>
                     <th scope="col">套餐价格</th>
@@ -55,10 +54,12 @@
                     	<p th:each="items,state1 : ${item.list}" th:text="${items.mname}"></p>
                     </td>
                     <td><a class="sj" href="JavaScript:void(0)" th:if="${item.state=='1'}" th:text="上架" ></a><a class="xj"  href="JavaScript:void(0)"  th:if="${item.state=='2'}" th:text="下架" style="color: red;"></a></td>
+                    <td style="display: none;" th:text="${item.id}"></td>
                     <td th:text="${item.likecount}"></td>
                     <td>
-                      <a href="#" class="tm-product-delete-link">
-                        <i class="far fa-trash-alt tm-product-delete-icon"></i>
+                      <a href="JavaScript:void(0)" class="tm-product-delete-link">
+                      	<input type="hidden" th:value="${item.id}">
+                        <i class="sc far fa-trash-alt tm-product-delete-icon"></i>
                       </a>
                     </td>
                   </tr>
@@ -85,6 +86,69 @@
         $(".tm-product-name").on("click", function() {
           window.location.href = "GoodContactUpdate.html";
         });
+        
+        $(".sc").on("click",function(){
+			var id=$(this).prev().val();
+			var res = confirm("确定删除该套餐吗？");
+			if(res==true){
+				/* $.ajax({
+					url:"/delbind",
+					data:{"id":id},
+					type:"post",
+					success:function(result){
+						alert(result);
+						window.location.reload();
+					}
+				}) */
+			}else{
+				return false;
+			}
+		})
+        
+        
+        
+        $(".sj").on("click",function(){
+			var type=$(this).text();
+			var id=$(this).parent().next().text();
+			var res = confirm("确定要下架该商品吗？");
+			if(res==true){
+				$.ajax({
+					url:"/tcsjxj",
+					data:{"type":type,"id":id},
+					type:"post",
+					success:function(result){
+						alert(result);
+						window.location.reload();
+					}
+				})
+			}else{
+				return false;
+			}
+			
+		})
+		
+		
+		$(".xj").on("click",function(){
+			var type=$(this).text();
+			var id=$(this).parent().next().text();
+			var res = confirm("确定要上架该商品吗？");
+			if(res==true){
+				$.ajax({
+					url:"/tcsjxj",
+					data:{"type":type,"id":id},
+					type:"post",
+					success:function(result){
+						alert(result);
+						window.location.reload();
+					}
+				})
+			}else{
+				return false;
+			}
+			
+		})
+        
+        
       });
     </script>
   </body>
