--- a/src/main/resources/templates/CustomerCare.html
+++ b/src/main/resources/templates/CustomerCare.html
@@ -126,12 +126,6 @@
 									<div class="form-group  col-md-6">
 										<label for="inputFirstname" class="col-md-4  col-lg-4 control-label ">账号:</label>
 										<div class="col-md-8 col-lg-8">
-											<p th:text="${user.name6}"></p>
-										</div>
-									</div>
-									<div class="form-group  col-md-6">
-										<label for="inputLastname" class="col-md-4 col-lg-4 control-label ">姓名:</label>
-										<div class="col-md-8 col-lg-8 ">
 											<p th:text="${user.uname}"></p>
 										</div>
 									</div>
@@ -183,9 +177,9 @@
 											<p th:text="${user.year}+年+${user.month}+月+${user.day}+日">1998年12月12日</p>
 										</div>
 									</div>
-									<div class="form-group col-md-12">
-										<label for="inputCity" class="col-sm-2 col-lg-2 control-label ">居住地址:</label>
-										<div class="col-sm-10 col-lg-10">
+									<div class="form-group col-md-6">
+										<label for="inputCity" class="col-sm-4 col-lg-4 control-label ">居住地址:</label>
+										<div class="col-sm-8 col-lg-8">
 											<p th:text="${user.address}">湖南 株洲市 XX区 XX街道 XXXXX XXX XXX</p>
 										</div>
 									</div>
@@ -210,7 +204,12 @@
 									</div>
 									<div class="content col-md-12 collapsed" id="checkout-collapse4">
 										<div class="dingdanhead">
-											<h4><a data-toggle="collase"  href="#checkout-collapse5" ><span class="step">01</span><span>负责人订单:</span><span class="dingdanhao">SS222121</span></a><span class="time">订单时间:</span><span>2019-12-2 22:22:22</span><span class="status">订单状态：</span><span>已完成</span><span class="sum"> 订单总价:</span><span>￥2002</span><span class="team">我的订单</span></h4>
+											<h4>
+												<a data-toggle="collase"  href="#checkout-collapse5" >
+													<span class="step">01</span>
+													<span>负责人订单</span>
+												</a>
+											</h4>
 										</div>
 										<div class="content col-md-11 collapsed" id="checkout-collapse5">
 											<table class="table">
