--- a/src/main/resources/templates/addcustomer.html
+++ b/src/main/resources/templates/addcustomer.html
@@ -47,10 +47,6 @@
 							<div class="row" id="shuxing">
 								<form class="form-inline col-md-12" method="post" enctype="multipart/form-data" th:action="@{/customer/addCustomer}">
 									<div class="form-group col-md-6">
-										<label for="uname" class="col-md-5">客户名称:</label>
-										<input type="text" name="uname" id="uname" class="form-control col-md-7">
-									</div>
-									<div class="form-group col-md-6">
 										<label for="" class="col-md-5">电话:</label>
 										<input type="text" class="form-control col-md-7" name="phone">
 									</div>
@@ -69,10 +65,10 @@
 									</div>
 									<div class="form-group col-md-6" >
 										<label for="" class="col-md-5">身份证号:</label>
-										<input type="text" name="idcardno" class="form-control col-md-7">
+										<input type="text" name="idcardno" id="idCardNo" class="form-control col-md-7">
 									</div>
-									<div class="form-group col-md-12">
-										<label for="" class="col-md-3">居住地址:</label>
+									<div class="form-group col-md-6">
+										<label for="" class="col-md-5">居住地址:</label>
 										<input type="text" name="address" class="form-control col-md-7">
 									</div>
 									<div class="form-group col-md-12">
@@ -103,7 +99,21 @@
 			<script th:src="@{/js/bootstrap.min.js}"></script>
 			<!-- https://getbootstrap.com/ -->
 			<script>
-				
+				$("#idCardNo").blur(function(){
+					var IdCardNo=$(this).val();
+					$.ajax({
+						url:"/customer/queryByIdCard",
+						data:{"IdCardNo":IdCardNo},
+						type:"post",
+						success:function(data){
+							console.log(data);
+							if(data!=""){
+								alert("你已注册过了");
+							}
+						}
+					})
+					
+				})
 				//选中团队 即出现Excel导入 	
 				$("[name='team']").click(function() {
 					if($(this).val()=="1") {
