--- a/src/main/resources/templates/add-product.html
+++ b/src/main/resources/templates/add-product.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<title>添加活动</title>
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700" />
 		<!-- https://fonts.google.com/specimen/Roboto -->
-		<link rel="stylesheet" href="css/fontawesome.min.css" />
+		<link rel="stylesheet" th:href="@{/css/fontawesome.min.css}" />
 		<!-- https://fontawesome.com/ -->
-		<link rel="stylesheet" href="jquery-ui-datepicker/jquery-ui.min.css" type="text/css" />
+		<link rel="stylesheet" th:href="@{/jquery-ui-datepicker/jquery-ui.min.css}" type="text/css" />
 		<!-- http://api.jqueryui.com/datepicker/ -->
-		<link rel="stylesheet" href="css/bootstrap.min.css" />
+		<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
 		<!-- https://getbootstrap.com/ -->
-		<link rel="stylesheet" href="css/templatemo-style.css">
+		<link rel="stylesheet" th:href="@{/css/templatemo-style.css}">
 		<style>
 			/*#ty_tc_top span{
     		margin-left: 50px;
@@ -51,7 +50,7 @@
 										<div class="form-group mb-3">
 											<label for="name">活动名称
                     </label>
-											<input id="name" name="name" type="text" class="form-control validate" required />
+											<input id="name" name="pname" type="text" class="form-control validate" required />
 										</div>
 										<div class="form-group mb-3">
 											<label for="description">活动内容</label
@@ -59,10 +58,11 @@
                     <textarea
                       class="form-control validate"
                       rows="3"
+                      name="content"
                       required
                     ></textarea>
                   </div>
-                 <div class="form-group mb-3">
+                 <!-- <div class="form-group mb-3">
                     <label
                       for=""
                       >选择工作人员</label
@@ -76,7 +76,7 @@
                       <option value="1">活动负责人</option>
                       <option value="2">活动领队</option>
                     </select>
-                  </div>
+                  </div> -->
                    <div hidden id="show_ry" class="form-group mb-3">
                     <label
                       for=""
@@ -111,17 +111,11 @@
 								</div>
 							</div>
 							<div class="col-xl-6 col-lg-6 col-md-12 mx-auto mb-4">
-								<div class="tm-product-img-dummy mx-auto">
-									<i class="fas fa-cloud-upload-alt tm-upload-icon" onclick="document.getElementById('fileInput').click();"></i>
-								</div>
-								<div class="custom-file mt-3 mb-3">
-									<input id="fileInput" type="file" style="display:none;" />
-									<input type="button" class="btn btn-primary btn-block mx-auto" value="上传图片" onclick="document.getElementById('fileInput').click();" />
-								</div>
+								
 
 							</div>
 							<div class="col-12" style="margin-top: 20px;">
-								<button type="submit" class="btn btn-primary btn-block text-uppercase">新增活动</button>
+								<button type="button" id="xjhd" class="btn btn-primary btn-block text-uppercase">新增活动</button>
 							</div>
 							</form>
 						</div>
@@ -179,16 +173,8 @@
 								</tr>
 							</thead>
 							<tbody>
-								<tr>
-									<td xmid="1">骑马</td>
-									<th><input type="checkbox" name="ck_xm" /></th>
-								</tr>
-								<tr>
-									<td xmid="2">射箭</td>
-									<th><input type="checkbox" name="ck_xm" /></th>
-								</tr>
-								<tr>
-									<td xmid="3">种田</td>
+								<tr th:each="item : ${list}">
+									<td th:id="${item.id}" th:text="${item.name}"></td>
 									<th><input type="checkbox" name="ck_xm" /></th>
 								</tr>
 							</tbody>
@@ -214,11 +200,11 @@
 			</div>
 			</div>
 		</div>
-		<script src="js/jquery-3.3.1.min.js"></script>
+		<script th:src="@{/js/jquery-3.3.1.min.js}"></script>
 		<!-- https://jquery.com/download/ -->
-		<script src="jquery-ui-datepicker/jquery-ui.min.js"></script>
+		<script th:src="@{/jquery-ui-datepicker/jquery-ui.min.js}"></script>
 		<!-- https://jqueryui.com/download/ -->
-		<script src="js/bootstrap.min.js"></script>
+		<script th:src="@{/js/bootstrap.min.js}"></script>
 		<!-- https://getbootstrap.com/ -->
 		<script>
 			
@@ -252,6 +238,19 @@
 						$("#show_xm_table").append(xm);
 					}
 
+				})
+				
+				//新增活动
+				$("#xjhd").click(function(){
+					var pro={};
+					pro.pname=$("[name=pname]").val();
+					pro.content=$("[name=content]").val();
+					var plist=[];
+					$("#show_xm_table").each(function(){
+						var p={};
+						p.pid=$(this).find("pid");
+						p.push(plist);
+					})
 				})
 			});
 
