--- a/src/main/resources/templates/edit-project.html
+++ b/src/main/resources/templates/edit-project.html
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html xmlns:th="http://www.thymeleaf.org">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<title>Edit Product - Dashboard Admin Template</title>
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700" />
-		<!-- https://fonts.google.com/specimen/Roboto -->
-		<link rel="stylesheet" href="css/fontawesome.min.css" />
-		<!-- https://fontawesome.com/ -->
-		<link rel="stylesheet" href="jquery-ui-datepicker/jquery-ui.min.css" type="text/css" />
+		<link rel="stylesheet" th:href="@{/css/fontawesome.min.css}"/>
+		<link rel="stylesheet" th:href="@{/jquery-ui-datepicker/jquery-ui.min.css}" type="text/css" />
 		<!-- http://api.jqueryui.com/datepicker/ -->
-		<link rel="stylesheet" href="css/bootstrap.min.css" />
+		<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
 		<!-- https://getbootstrap.com/ -->
-		<link rel="stylesheet" href="css/templatemo-style.css">
+		<link rel="stylesheet" th:href="@{/css/templatemo-style.css}">
 
 	</head>
 
@@ -313,11 +309,11 @@
 				</div>
 				</div>
 	</div>
-    <script src="js/jquery-3.3.1.min.js"></script>
+    <script th:src="@{js/jquery-3.3.1.min.js}"></script>
     <!-- https://jquery.com/download/ -->
-    <script src="jquery-ui-datepicker/jquery-ui.min.js"></script>
+    <script th:src="@{jquery-ui-datepicker/jquery-ui.min.js}"></script>
     <!-- https://jqueryui.com/download/ -->
-    <script src="js/bootstrap.min.js"></script>
+    <script th:src="@{js/bootstrap.min.js}"></script>
     <!-- https://getbootstrap.com/ -->
     <script>
       $(function() {
